--- a/be-spring-security/build.gradle
+++ b/be-spring-security/build.gradle
@@ -15,6 +15,20 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
+implementation 'org.springframework.boot:spring-boot-starter-security:3.0.6'
+
+
+	
+	
+	//Lombok
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	// https://mvnrepository.com/artifact/net.ontopia/ontopia-tmrap
+implementation 'net.ontopia:ontopia-tmrap:5.4.0'
+	
+
 }
 
 tasks.named('test') {
