--- a/be-spring-security/build.gradle
+++ b/be-spring-security/build.gradle
@@ -18,16 +18,14 @@ dependencies {
 
 // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
 implementation 'org.springframework.boot:spring-boot-starter-security:3.0.6'
-// https://mvnrepository.com/artifact/javax.xml/jaxws-api
-implementation 'javax.xml:jaxws-api:2.0'
+implementation 'org.springframework.security:spring-security-oauth2-resource-server:6.1.0'
+implementation 'org.springframework.security:spring-security-oauth2-jose:6.1.0'
 
 
 	
 	//Lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	// https://mvnrepository.com/artifact/net.ontopia/ontopia-tmrap
-implementation 'net.ontopia:ontopia-tmrap:5.4.0'
 	
 
 }
